--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,19 +1,56 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
+  http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+  version="3.1">
+  <display-name>Zanata MT</display-name>
 
-<web-app version="3.0"
-         xmlns="http://java.sun.com/xml/ns/javaee"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
-         metadata-complete="false">
+  <!-- Welcome page -->
+  <welcome-file-list>
+    <welcome-file>index.jsp</welcome-file>
+  </welcome-file-list>
 
-         <servlet>
-                  <servlet-name>health</servlet-name>
-                  <jsp-file>/health.jsp</jsp-file>
-         </servlet>
-         <servlet-mapping>
-                  <servlet-name>health</servlet-name>
-                  <url-pattern>/health</url-pattern>
-         </servlet-mapping>
-         
+  <!--
+  Make sure Liquibase is the first listener (after ClassLoaderLeakPreventor),
+  so that it can update the database schema before
+  anyone uses the database.
+   -->
+
+  <context-param>
+    <param-name>liquibase.changelog</param-name>
+    <param-value>db/db.changelog.xml</param-value>
+  </context-param>
+
+  <context-param>
+    <param-name>liquibase.datasource</param-name>
+    <param-value>java:jboss/datasources/mt</param-value>
+  </context-param>
+
+  <context-param>
+    <param-name>liquibase.onerror.fail</param-name>
+    <param-value>true</param-value>
+  </context-param>
+
+  <listener>
+    <listener-class>liquibase.integration.servlet.LiquibaseServletListener</listener-class>
+  </listener>
+
+ <filter>
+   <filter-name>monitoring</filter-name>
+   <filter-class>net.bull.javamelody.MonitoringFilter</filter-class>
+ </filter>
+ <filter-mapping>
+   <filter-name>monitoring</filter-name>
+   <url-pattern>/*</url-pattern>
+ </filter-mapping>
+
+  <filter-mapping>
+    <filter-name>APIResponseFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+
+ <listener>
+   <listener-class>net.bull.javamelody.SessionListener</listener-class>
+ </listener>
 </web-app>
-
