--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,8 @@
     <hibernate.validator.version>4.3.2.Final</hibernate.validator.version>
     <hibernate.version>4.2.19.Final</hibernate.version>
 
+    <deltaspike.version>1.7.2</deltaspike.version>
+
     <!-- database -->
     <postgresql.version>9.2-1004-jdbc3</postgresql.version>
     <postgresql.port>5432</postgresql.port>
@@ -512,9 +514,21 @@
     </dependency>
 
     <dependency>
-      <groupId>org.mockito</groupId>
-      <artifactId>mockito-core</artifactId>
-      <version>2.3.0</version>
+      <groupId>org.powermock</groupId>
+      <artifactId>powermock-api-mockito</artifactId>
+      <version>1.6.6</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.powermock</groupId>
+      <artifactId>powermock-core</artifactId>
+      <version>1.6.6</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.powermock</groupId>
+      <artifactId>powermock-module-junit4</artifactId>
+      <version>1.6.6</version>
       <scope>test</scope>
     </dependency>
 
@@ -522,6 +536,13 @@
       <groupId>org.jglue.cdi-unit</groupId>
       <artifactId>cdi-unit</artifactId>
       <version>3.1.4</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <version>1.4.193</version>
       <scope>test</scope>
     </dependency>
 
