--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.zanata.mt</groupId>
-  <artifactId>ZanataMT</artifactId>
+  <artifactId>zanata-mt</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <name>Zanata MT</name>
   <packaging>war</packaging>
