--- a/pom.xml
+++ b/pom.xml
@@ -44,8 +44,8 @@
     <!-- cargo settings -->
     <cargo.host>localhost</cargo.host>
     <cargo.port.offset>0</cargo.port.offset>
-    <cargo.installation>http://download.jboss.org/wildfly/8.2.1.Final/wildfly-8.2.1.Final.tar.gz</cargo.installation>
-    <cargo.containerId>wildfly8x</cargo.containerId>
+    <cargo.installation>http://download.jboss.org/wildfly/10.1.0.Final/wildfly-10.1.0.Final.tar.gz</cargo.installation>
+    <cargo.containerId>wildfly10x</cargo.containerId>
     <cargo.extract.dir>${project.build.directory}/cargo/installs</cargo.extract.dir>
     <cargo.container.home>${project.build.directory}/jboss/container</cargo.container.home>
     <cargo.servlet.port>8080</cargo.servlet.port>
@@ -243,8 +243,11 @@
 
             <systemProperties>
               <!-- System properties for Azure service. Set this in your maven settings.xml for DEV -->
-              <AZURE_ID>${AZURE_ID}</AZURE_ID>
-              <AZURE_SECRET>${AZURE_SECRET}</AZURE_SECRET>
+              <!-- Require double quote around the value to escape special char which throws error in jboss-cli -->
+              <ZANATA_MT_AZURE_ID>"${ZANATA_MT_AZURE_ID}"</ZANATA_MT_AZURE_ID>
+              <ZANATA_MT_AZURE_SECRET>"${ZANATA_MT_AZURE_SECRET}"</ZANATA_MT_AZURE_SECRET>
+              <ZANATA_MT_ID>"${ZANATA_MT_ID}"</ZANATA_MT_ID>
+              <ZANATA_MT_API_KEY>"${ZANATA_MT_API_KEY}"</ZANATA_MT_API_KEY>
             </systemProperties>
           </container>
 
@@ -666,6 +669,8 @@
         It is used as base-url for script.js to download article-script.js in bookmarklet.
         -->
         <service.url>http://${cargo.host}:${cargo.servlet.port}</service.url>
+        <ZANATA_MT_ID>devID</ZANATA_MT_ID>
+        <ZANATA_MT_API_KEY>devKey</ZANATA_MT_API_KEY>
       </properties>
     </profile>
 
@@ -675,6 +680,8 @@
       <properties>
         <name>production</name>
         <service.url>https://server-zanata-mt.int.open.paas.redhat.com</service.url>
+        <ZANATA_MT_ID></ZANATA_MT_ID>
+        <ZANATA_MT_API_KEY></ZANATA_MT_API_KEY>
       </properties>
       <build>
         <finalName>ZanataMT</finalName>
