--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <tag>HEAD</tag>
   </scm>
   <properties>
+    <github.global.server>github</github.global.server>
     <timestamp>${maven.build.timestamp}</timestamp>
     <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
 
@@ -61,6 +62,8 @@
     <checkstyle.suppressions.location>src/main/resources/checkstyle-suppressions.xml</checkstyle.suppressions.location>
     <checkstyle.consoleOutput>true</checkstyle.consoleOutput>
 
+
+    <jacoco-maven-plugin.version>0.7.8</jacoco-maven-plugin.version>
     <enunciate.version>2.8.0</enunciate.version>
 
     <findbugs.failOnError>false</findbugs.failOnError>
@@ -79,7 +82,7 @@
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
-        <version>0.7.8</version>
+        <version>${jacoco-maven-plugin.version}</version>
         <executions>
           <execution>
             <id>default-prepare-agent</id>
@@ -127,7 +130,11 @@
         <version>${enunciate.version}</version>
         <configuration>
           <enunciateArtifactId>zanataMT</enunciateArtifactId>
-          <docsDir>${project.basedir}/docs/rest-api-docs</docsDir>
+          <docsDir>${project.build.directory}/site</docsDir>
+          <!-- The subdirectory of the site where the documentation will be put. -->
+          <!-- Note that if this isn't set, the documentation will overwrite the site. -->
+          <docsSubdir>api-docs</docsSubdir>
+          <indexPageName>index.html</indexPageName>
         </configuration>
         <executions>
           <execution>
@@ -385,8 +392,35 @@
           <goals>verify</goals>
         </configuration>
       </plugin>
+
+      <plugin>
+        <groupId>com.github.github</groupId>
+        <artifactId>site-maven-plugin</artifactId>
+        <version>0.12</version>
+        <configuration>
+          <message>Creating site for ${project.version}</message>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>site</goal>
+            </goals>
+            <phase>site</phase>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
+
+  <reporting>
+    <excludeDefaults>true</excludeDefaults>
+    <plugins>
+      <plugin>
+        <groupId>com.webcohesion.enunciate</groupId>
+        <artifactId>enunciate-slim-maven-plugin</artifactId>
+      </plugin>
+    </plugins>
+  </reporting>
 
   <dependencies>
 
