--- a/pom.xml
+++ b/pom.xml
@@ -33,10 +33,9 @@
     <powermock.version>1.6.6</powermock.version>
 
     <!-- database -->
-    <postgresql.version>9.4.1212</postgresql.version>
-    <postgresql.port>5432</postgresql.port>
-    <postgresql.user>root</postgresql.user>
-    <postgresql.password>root</postgresql.password>
+    <mariadb.port>3306</mariadb.port>
+    <mariadb.user>root</mariadb.user>
+    <mariadb.password>root</mariadb.password>
     <db.name>zanataMT</db.name>
     <docker-maven-plugin.version>0.16.8</docker-maven-plugin.version>
     <datasource.name>java:jboss/datasources/${db.name}</datasource.name>
@@ -222,22 +221,27 @@
           <logDate>default</logDate>
           <autoPull>true</autoPull>
           <images>
-            <!-- Postgres Image is used 'as-is' and is linked into the service image -->
+            <!-- Mariadb Image is used 'as-is' and is linked into the service image -->
             <image>
               <alias>zanataMTDB</alias>
-              <name>postgres:9.4</name>
+              <name>mariadb:10.1.22</name>
               <run>
                 <env>
-                  <POSTGRES_DB>${db.name}</POSTGRES_DB>
-                  <POSTGRES_USER>${postgresql.user}</POSTGRES_USER>
-                  <POSTGRES_PASSWORD>${postgresql.password}</POSTGRES_PASSWORD>
+                  <MYSQL_ROOT_PASSWORD>${mariadb.password}</MYSQL_ROOT_PASSWORD>
+                  <MYSQL_DATABASE>${db.name}</MYSQL_DATABASE>
+                  <!--&#45;&#45;character-set-server=utf8 &#45;&#45;collation-server=utf8_general_ci-->
                 </env>
                 <ports>
-                  <port>${postgresql.port}:${postgresql.port}</port>
+                  <!-- map from 3306 to 3305 in host-->
+                  <port>3305:${mariadb.port}</port>
                 </ports>
                 <wait>
-                  <log>database system is ready to accept connections</log>
-                  <time>20000</time>
+                  <tcp>
+                    <ports>
+                      <port>3306</port>
+                    </ports>
+                  </tcp>
+                  <time>60000</time>
                 </wait>
                 <log>
                   <date>default</date>
@@ -258,11 +262,11 @@
               </build>
               <run>
                 <env>
-                  <POSTGRESQL_URL>zanataMTDB</POSTGRESQL_URL>
-                  <POSTGRESQL_PORT>${postgresql.port}</POSTGRESQL_PORT>
-                  <POSTGRESQL_DATABASE>${db.name}</POSTGRESQL_DATABASE>
-                  <POSTGRESQL_USER>${postgresql.user}</POSTGRESQL_USER>
-                  <POSTGRESQL_PASSWORD>${postgresql.password}</POSTGRESQL_PASSWORD>
+                  <MARIADB_URL>zanataMTDB</MARIADB_URL>
+                  <MARIADB_PORT>${mariadb.port}</MARIADB_PORT>
+                  <MARIADB_DATABASE>${db.name}</MARIADB_DATABASE>
+                  <MARIADB_USER>${mariadb.user}</MARIADB_USER>
+                  <MARIADB_PASSWORD>${mariadb.password}</MARIADB_PASSWORD>
                   <ZANATA_MT_AZURE_KEY>${ZANATA_MT_AZURE_KEY}</ZANATA_MT_AZURE_KEY>
                   <ZANATA_MT_API_ID>devID</ZANATA_MT_API_ID>
                   <ZANATA_MT_API_KEY>devKEY</ZANATA_MT_API_KEY>
@@ -279,6 +283,7 @@
                   <color>cyan</color>
                 </log>
                 <links>
+                  <!-- this is to expose DB container's env variables with prefix DB -->
                   <link>zanataMTDB:db</link>
                 </links>
                 <namingStrategy>alias</namingStrategy>
@@ -582,9 +587,9 @@
     </dependency>
 
     <dependency>
-      <groupId>org.postgresql</groupId>
-      <artifactId>postgresql</artifactId>
-      <version>${postgresql.version}</version>
+      <groupId>org.mariadb.jdbc</groupId>
+      <artifactId>mariadb-java-client</artifactId>
+      <version>1.5.9</version>
       <scope>provided</scope>
     </dependency>
 
