--- a/.editorconfig
+++ b/.editorconfig
@@ -25,6 +25,7 @@ trim_trailing_whitespace = false
 [LICENSE*.txt]
 indent_style = unset
 indent_size = unset
+trim_trailing_whitespace = false
 
 [{.babelrc,.stylelintrc,.eslintrc,*.json,*.jsb3,*.jsb2,*.bowerrc}]
 indent_style = space
@@ -39,10 +40,20 @@ indent_style = space
 indent_size = 2
 continuation_indent_size = 4
 
+[{db.changelog-[123]*.xml,*_baseline.sql}]
+indent_style = unset
+indent_size = unset
+trim_trailing_whitespace = false
+
 [{*.ddl,*.sql}]
 indent_style = space
 indent_size = 2
 continuation_indent_size = 4
+
+[{*.groovy,Jenkinsfile}]
+indent_style = space
+indent_size = 2
+tab_width = 2
 
 [{*.js,*.jsx}]
 indent_style = space
