--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -32,20 +32,24 @@
     <param-value>true</param-value>
   </context-param>
 
+  <context-param>
+    <param-name>javamelody.monitoring-path</param-name>
+    <param-value>/admin/monitoring</param-value>
+  </context-param>
+
   <listener>
     <listener-class>liquibase.integration.servlet.LiquibaseServletListener</listener-class>
   </listener>
 
- <filter>
-   <filter-name>monitoring</filter-name>
-   <filter-class>net.bull.javamelody.MonitoringFilter</filter-class>
- </filter>
- <filter-mapping>
-   <filter-name>monitoring</filter-name>
-   <url-pattern>/*</url-pattern>
- </filter-mapping>
-
- <listener>
-   <listener-class>net.bull.javamelody.SessionListener</listener-class>
- </listener>
+  <filter>
+    <!-- This name must match the web-fragment.xml in javamelody's jar,
+         so that we can override it. -->
+    <filter-name>javamelody</filter-name>
+    <filter-class>org.zanata.mt.servlet.JavaMelodyFilter</filter-class>
+    <!--<async-supported>true</async-supported>-->
+  </filter>
+  <filter-mapping>
+    <filter-name>javamelody</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
 </web-app>
